# dd-terrain

./: .gitignore  Cargo.toml  README.md  bacon.toml  setup.md  spec.tex  specification.md  todo.md
assets/RavineDemo/: r.-1.1.mca  r.0.1.mca  r.1.-1.mca  r.1.1.mca
docs/: developer_documentation.md  setup.md  specification.md
src/: camera.rs  config.rs  geometry.rs  imgui_wrapper.rs  input.rs  macros.rs  main.rs  minecraft.rs  renderer.rs  scene.rs  vertex.rs  wavefront_object.rs
src/infrastructure/: input.rs  mod.rs  render_fragment.rs  render_state.rs  vertex.rs
src/infrastructure/texture/: material_blend.rs  mod.rs  texture_loader.rs
src/model/: common.rs  discrete.rs  implicit.rs  mod.rs  rectangle.rs
src/model/chunk/: chunk.rs  chunk_position.rs  material_tower.rs  mod.rs
src/model/implicit/: mod.rs  normal.rs  sdf.rs  smooth.rs
src/model/polygonize/: marching_cubes.rs  mod.rs
src/shaders/: discrete_fs.glsl  discrete_vs.glsl  fs.glsl  implicit_fs.glsl  implicit_vs.glsl  vs.glsl
