[package]
name = "glium-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
# Wayland support since glium does not expose the feature TODO: use same version that glium uses if needed
# glutin = { version = "0.29.1", features = ["wayland"] }
imgui = "0.10.0"
imgui-glium-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
cgmath = { version = "0.18.0", features = ["swizzle"] }

# For working with minecraft data files
fastanvil = "0.26.1"
fastnbt = "2.4.3"
array-init = "2.1.0"
itertools = "0.10.5"
image = { version = "0.24.6", features = ["png"] }
lazy-init = "0.5.1"
rayon = "1.7.0"
